# relay

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  setup_repo_commands.txt  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
.tauri-keys/: update.key.pub
src/: App.tsx  index.css  local_proxy.rs  main.rs  main.tsx  proxy_cache.rs  proxy_type.rs  speed_test.rs  theme.ts  types.ts  upstream.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anonymity_check.rs  atomic_write.rs  commands.rs  cred_encrypt.rs  dns_resolver.rs  geoip.rs  import_export.rs  kill_switch.rs  leak_test.rs  lib.rs  local_proxy.rs  main.rs  notifications.rs  plugin_manager.rs  plugin_sdk.rs  port_kill.rs  profiles.rs  proxy_cache.rs  proxy_chain.rs  proxy_instance.rs  proxy_lists.rs  proxy_manager.rs  proxy_type.rs  scheduler.rs  settings.rs  speed_test.rs  split_tunnel.rs  system_proxy.rs  tls_fingerprint.rs  upstream.rs
src-tauri/src/builtin_plugins/: geoip_plugin.rs  mod.rs  system_proxy_plugin.rs  tor_downloader.rs
src-tauri/src/sources/: mod.rs  other_sources.rs  proxyscrape.rs
src/components/: AddProxyDialog.tsx  AnonymityBadge.tsx  CustomCheckbox.tsx  CustomSelect.tsx  Layout.tsx  ManageProxiesRowCard.tsx  OverviewCard.tsx  ProxyCard.tsx  StatusBadge.tsx  ThemeToggle.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/contexts/: ProxyContext.tsx
src/hooks/: useProxyLists.ts  useSettings.ts
src/pages/: BandwidthPage.tsx  CreateProxyPage.tsx  DashboardPage.tsx  LeakTestPage.tsx  PluginsPage.tsx  ProxyCheckerPage.tsx  ProxyDetailPage.tsx  ProxyListsPage.tsx  ProxyPage.tsx  SchedulePage.tsx  SettingsPage.tsx  SplitTunnelPage.tsx  TorPage.tsx
src/sources/: mod.rs  other_sources.rs  proxyscrape.rs
src/utils/: countryFlags.ts
