[package]
name = "autoproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autoproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-socks = "0.5"
futures = "0.3"
parking_lot = "0.12"
