[package]
name = "relay"
version = "0.3.3"
edition = "2021"

[lib]
name = "relay_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["socks", "json", "blocking"] }
libloading = "0.8"
flate2 = "1"
tar = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-socks = "0.5"
futures = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
base64 = "0.22"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
hickory-proto = "0.25"
socket2 = "0.5"
rand = "0.9"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
subtle = "2"
sha2 = "0.10"
hmac = "0.12"
webpki-roots = "0.26"
chacha20poly1305 = "0.10"
url = "2"
maxminddb = "0.24"
tauri-plugin-notification = "2"
chrono = { version = "0.4", features = ["clock"] }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory", "Win32_System_SystemServices"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
